# Riftbound-Card-Scanner

./: .gitignore  LICENSE  NOTICE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
model/: ASSET_NOTICES.md  cards_scraper.py  data_creator.py  requirements.txt  train.py
scripts/: check-runtime-assets.mjs
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: main.rs
src/components/: LoadingScreen.jsx
src/components/collection/: CollectionTab.jsx
src/components/identify/: CardDetailPanel.jsx
src/components/scan/: ScanAddAnimation.jsx  ScanTab.jsx
src/components/scanner/: ScannerCamera.jsx  ScannerCardRow.jsx
src/components/settings/: SettingsTab.jsx
src/hooks/: useAutoScan.js  useCamera.js  useCardDetection.js
src/lib/: appUpdater.js  cardMatcher.js  csvExporter.js  desktopBridge.js  indexedDB.js  priceFormat.js  priceSync.js  runtime.js  scanSets.js  yoloDetector.js
