[package]
name = "riftbound_scanner"
version = "26.5.10-1"
description = "Standalone desktop shell for Riftbound Scanner"
authors = ["Teme1999"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
url = "2"
webbrowser = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
