[package]
name = "riftbound_scanner"
version = "26.5.12-1"
description = "Standalone desktop shell for Riftbound Scanner"
authors = ["Teme1999"]
license = "MIT"
homepage = "https://github.com/Teme1999/Riftbound-Card-Scanner"
repository = "https://github.com/Teme1999/Riftbound-Card-Scanner"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
directories = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
webbrowser = "1"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
